--- a/product/build.gradle
+++ b/product/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     // Kotlin Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
+    // Coil
+    implementation 'io.coil-kt:coil:2.1.0'
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     testImplementation 'junit:junit:4.13.2'
